Pausas informativas en el cambio de nivel.

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,5 +1,6 @@
 Mejoras pra cerrar versión 1.0:
+- pantalla highscores
 - Highscores online (firebase)
-- Sonido
-- Final Boss
-
+- final boss
+- pantalla de felicitacion
+- sonido
